--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=majestic-food-api
+spring.datasource.url=jdbc:mysql://localhost:3306/db_majestic_food
+spring.datasource.username=root
+spring.datasource.password=02062002Deimer?
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
