--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 stripe.key.secret=${STRIPE_SECRET_KEY}
 stripe.key.public=${STRIPE_PUBLIC_KEY}
+stripe.success.url=${STRIPE_SUCCESS_URL}
+stripe.cancel.url=${STRIPE_CANCEL_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.servlet.multipart.max-file-size=150MB
