Stripe event created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,7 @@ stripe.key.secret=${STRIPE_SECRET_KEY}
 stripe.key.public=${STRIPE_PUBLIC_KEY}
 stripe.success.url=${STRIPE_SUCCESS_URL}
 stripe.cancel.url=${STRIPE_CANCEL_URL}
+stripe.webhook.secret="${STRIPE_WEBHOOK_SECRET}"
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.servlet.multipart.max-file-size=150MB
